--- a/css/style.css
+++ b/css/style.css
@@ -3,30 +3,37 @@ body {
 }
 
 .container {
-  max-width: 1100px;
   margin: 0 auto;
+  max-width: 1100px;
 }
 
 .menu {
   margin-top: 50px;
+  background-color: #333333;
+  border-bottom: 5px solid #00a9ff;
 }
+
 
 .menu-list {
   display: flex;
   justify-content: flex-start;
 }
 
+.menu-item {
+  height: 66px;
+}
+
+.menu-item:hover {
+  background-color: #00a9ff;
+}
+
 .menu-link {
+  display: inline-block;
   padding: 25px;
   border-bottom: 5px solid #00a9ff;
   text-transform: uppercase;
   text-decoration: none;
   color: #fff;
-  background-color: #333333;
-}
-
-.menu-link:hover {
-  background-color: #00a9ff;
 }
 
 .menu-submenu {
@@ -40,9 +47,9 @@ body {
 
 .submenu {
   position: absolute;
-  display: none;
-  top: 47px;
+  top: 71px;
   left: 0;
+  display: none;
 }
 
 .subitem {
@@ -59,9 +66,9 @@ body {
   position: relative;
   width: 230px;
   height: 41px;
+  display: inline-block;
   padding-top: 25px;
   padding-left: 20px;
-  display: inline-block;
   color: #fff;
   text-decoration: none;
 }
